# learntorch

./: .gitignore  README.md
torchscript/L1/: CMakeLists.txt  main.cpp  models.py
torchscript/L1/models/: net.pt
torchscript/L2/: CMakeLists.txt  main.cpp
torchscript/L3/: CMakeLists.txt
torchscript/L3/include/: dataset.h
torchscript/L3/src/: 3  dataset.cpp  main.cpp
